// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxFormTextarea customize 1`] = `
<div>
  <textarea
    class="form-control-plaintext is-invalid is-valid bazinga"
    disabled=""
    readonly=""
  >
    Some value
  </textarea>
</div>
`;

exports[`loads and displays CxFormTextarea component 1`] = `
<div>
  <textarea
    class="form-input"
  >
    Some value
  </textarea>
</div>
`;
